# griffinLogCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  griffinLog.cpp  griffinLog.h
benchmark/: CMakeLists.txt  benchmark.cpp  bm_million.cpp  build.bat  build.sh
src/griffinLog/: griffinLog.cpp  griffinLog.h  griffinLog.hpp
test/: CMakeLists.txt  build.bat  build.sh  test  test.cpp
